[tool.poetry]
name = "drfx"
version = "0.1.0"
description = ""
authors = ["Franco Correa <franco@francocorrea.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2"
djangorestframework = "^3.13.1"
django-rest-auth = "^0.9.5"
django-allauth = "^0.51.0"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.3"
django-grappelli = "^3.0.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
